* Names visible at Matrix. * Small Fixes

--- a/css/style.css
+++ b/css/style.css
@@ -142,6 +142,10 @@ body {
     fill: #eee;
 }
 
+line {
+    stroke: #fff;
+}
+
 text.active {
     fill: red;
 }
